syntax = "proto3";

option go_package = "github.com/many-things/mitosis/pkg/msgconv/osmo";

message Coin {
  string denom = 1;
  string amount = 2;
}

message SwapAmountInRoute {
  uint64 pool_id = 1;
  string token_out_denom = 2;
}

message SwapAmountOutRoute {
  uint64 pool_id = 1;
  string token_in_denom = 2;
}

message MsgSwapExactAmountIn {
  string sender = 1;
  repeated SwapAmountInRoute routes = 2;
  Coin token_in = 3;
  string token_out_min_amount = 4;
}

message MsgSwapExactAmountOut {
  string sender = 1;
  repeated SwapAmountOutRoute routes = 2;
  string token_in_max_amount = 3;
  Coin token_out = 4;
}